--- a/src/main/resources/templates/plantillas/menucabecera.html
+++ b/src/main/resources/templates/plantillas/menucabecera.html
@@ -7,7 +7,7 @@
 <body>
 	<nav th:fragment="menu">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">Solgestión</a>
+			<a class="navbar-brand" th:href="@{/}">Solgestión</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -15,22 +15,61 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
+					<li class="nav-item active"><a class="nav-link" th:href="@{/}">Home
 							<span class="sr-only">(current)</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Clientes</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="#">Máquinas</a>
-					</li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" th:href=@{/cliente/listado}
+						id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> Clientes </a>
+						<div class="dropdown-menu"
+							aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="/cliente/alta">Alta</a> <a
+								class="dropdown-item" th:href=@{/cliente/listado}>Listado</a> <a
+								class="dropdown-item" href="#">Buscar</a>
+
+						</div></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#"
 						id="navbarDropdownMenuLink" data-toggle="dropdown"
-						aria-haspopup="true" aria-expanded="false"> Dropdown link </a>
+						aria-haspopup="true" aria-expanded="false"> Máquinas </a>
 						<div class="dropdown-menu"
 							aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="#">Action</a> <a
-								class="dropdown-item" href="#">Another action</a> <a
-								class="dropdown-item" href="#">Something else here</a>
+							<a class="dropdown-item" href="/bono/alta">Alta</a> <a
+								class="dropdown-item" th:href=@{/bono/listado}>Listado</a> <a
+								class="dropdown-item" href="#"></a>
+						</div></li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" th:href=@{/bono/listado}
+						id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> Bonos </a>
+						<div class="dropdown-menu"
+							aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="/bono/alta">Alta</a> <a
+								class="dropdown-item" th:href=@{/bono/listado}>Listado</a> 
+								<a
+								class="dropdown-item" th:href=@{/bono/recarga}>Recarga Bono</a><a
+								class="dropdown-item" th:href=@{/bono/asocia}>Asociar bono</a>
+						</div></li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#"
+						id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> Sesiones </a>
+						<div class="dropdown-menu"
+							aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="/bono/alta">Alta</a> <a
+								class="dropdown-item" th:href=@{/bono/listado}>Listado</a> <a
+								class="dropdown-item" href="#"></a>
+						</div></li>
+						<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#"
+						id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> Exportar </a>
+						<div class="dropdown-menu"
+							aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="/bono/alta">Clientes</a> <a
+								class="dropdown-item" th:href=@{/bono/listado}>Sesiones</a> <a
+								class="dropdown-item" href="#"></a>
 						</div></li>
 				</ul>
 			</div>
