--- a/src/main/resources/templates/lampara/alta.html
+++ b/src/main/resources/templates/lampara/alta.html
@@ -60,6 +60,7 @@
 			</div>
 			<div>
 				<input type="hidden" th:field="*{id}" id="id">
+				<input type="hidden" th:field="*{maquina}" id="maquina">
 			</div>
 		</div>
 	</form>
