--- a/src/main/resources/templates/maquina/altainicial2.html
+++ b/src/main/resources/templates/maquina/altainicial2.html
@@ -145,6 +145,7 @@
 
 		<div>
 			<input type="hidden" th:field="*{id}" id="id">
+			<input type="hidden" th:field="*{lampara}" id="lampara">
 		</div>
 	</form>
 </body>
