--- a/src/main/resources/templates/maquina/instalar.html
+++ b/src/main/resources/templates/maquina/instalar.html
@@ -70,6 +70,7 @@
 
 					<div>
 						<input type="hidden" th:field="*{id}" id="id">
+						<input type="hidden" th:field="*{lampara}" id="lampara">
 					</div>
 				</div>
 			</div>
