--- a/src/main/resources/templates/plantillas/menucabecera.html
+++ b/src/main/resources/templates/plantillas/menucabecera.html
@@ -90,8 +90,8 @@
 						aria-haspopup="true" aria-expanded="false"> Exportar </a>
 						<div class="dropdown-menu"
 							aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="/bono/alta">Clientes</a> <a
-								class="dropdown-item" th:href=@{/bono/listado}>Sesiones</a> <a
+							<a class="dropdown-item" href="/cliente/listado">Clientes</a> <a
+								class="dropdown-item" th:href=@{/sesion/listado}>Sesiones</a> <a
 								class="dropdown-item" href="#"></a>
 						</div></li>
 				</ul>
