--- a/src/main/resources/templates/principal/principal.html
+++ b/src/main/resources/templates/principal/principal.html
@@ -13,5 +13,10 @@
 		<h1 th:text="'Pantalla Principal'"
 			class="text-dark border border-success border-top-0 border-left-0 border-right-0"></h1>
 			</div>
+			<div class="container">
+		<h1 th:text="'Solgestión'"
+			class="text-dark border border-success border-top-0 border-left-0 border-right-0"></h1>
+			</div>
+
 </body>
 </html>
