--- a/src/main/resources/templates/bono/listado.html
+++ b/src/main/resources/templates/bono/listado.html
@@ -30,7 +30,7 @@
 					<td class="col-1 align-middle" th:text="${bono.identificadorBono}"></td>
 					<td class="col-9 align-middle" th:text="${bono.codigoBarras}"></td>
 					<td class="col-9 align-middle" th:text="${bono.minutos}"></td>
-					<td><a th:href="@{ver/} + ${bono.id}" th:text="'Editar'"
+					<td><a th:href="@{ver/} + ${bono.id}" th:text="'Ver'"
 						class="btn btn-primary btn-xs "></a></td>
 					<td><a th:href="@{eliminar/} + ${bono.id}" th:text="'Borrar'"
 						class="btn btn-danger btn-xs"
