--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -33,7 +33,7 @@
 					<td class="col-2 align-middle" th:text="${cliente.nombre}"></td>
 					<td class="col-3 align-middle" th:text="${cliente.apellidos}"></td>
 					<td class="col-4 align-middle" th:text="${cliente.nif}"></td>
-					<td><a th:href="@{ver/} + ${cliente.id}" th:text="'Editar'"
+					<td><a th:href="@{ver/} + ${cliente.id}" th:text="'Ver'"
 						class="btn btn-primary btn-xs "></a></td>
 					<td><a th:href="@{eliminar/} + ${cliente.id}"
 						th:text="'Borrar'" class="btn btn-danger btn-xs"
