--- a/src/main/resources/templates/plantillas/menucabecera.html
+++ b/src/main/resources/templates/plantillas/menucabecera.html
@@ -26,7 +26,7 @@
 							aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" th:href=@{/cliente/alta}>Alta</a> <a
 								class="dropdown-item" th:href=@{/cliente/listado}>Listado</a> <a
-								class="dropdown-item" href="#">Buscar</a>
+								class="dropdown-item" th:href=@{/cliente/buscar}>Buscar</a>
 
 
 
