--- a/src/main/resources/templates/cliente/actualizar.html
+++ b/src/main/resources/templates/cliente/actualizar.html
@@ -131,8 +131,8 @@
 
 
 				<div>
-					<input type="hidden" th:field="*{id}" id="id">
-					<input type="hidden" th:field="*{bono}" id="bono">
+					<input type="hidden" th:field="*{id}" id="id"> <input
+						type="hidden" th:field="*{bono}" id="bono">
 				</div>
 			</div>
 		</form>
@@ -161,6 +161,34 @@
 							th:text="'Recargar'" class="btn btn-danger btn-xs"></a></td>
 					</tr>
 			</table>
+		</div>
+		
+		<div th:if="${cliente.sesionesCliente.size()>0}">
+			<div class="container">
+				<h1 th:text="'Listado  Sesiones'"
+					class="text-dark border border-success border-top-0 border-left-0 border-right-0"></h1>
+				<table
+					class="table table-striped table-bordered table-hover table-sm h-50">
+
+					<thead>
+						<tr>
+
+							<th class="text-secondary col-4">Fecha</th>
+							<th class="text-secondary col-1">Máquina</th>
+							<th class="text-secondary col-1">Duración Sesión</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="sesion: ${cliente.sesionesCliente}">
+
+							<td class="col-3 align-middle" th:text="${#temporals.format(sesion.fecha,'dd-MM-yyyy')}"></td>
+							<td class="col-4 align-middle" th:text="${sesion.maquina.nombre}"></td>
+							<td class="col-1 align-middle" th:text="${sesion.duracion}"></td>
+						</tr>
+					</tbody>
+				</table>
+				<nav th:replace="/maquina/paginator-nav :: paginator"></nav>
+			</div>
 		</div>
 </body>
 </html>
