--- a/src/main/resources/templates/maquina/listadosesionesmaquina.html
+++ b/src/main/resources/templates/maquina/listadosesionesmaquina.html
@@ -29,7 +29,7 @@
 	<div class="row align-items-end"></div>
 
 	<form role="form" th:action="@{/maquina/listadosesiones}"
-		th:object="${rangoFechas}" method="post">
+		th:object="${fechas}" method="post">
 		<div class="container">
 			<div class="row align-items-end">
 				<div class="form-group col-sm-2 row">
