--- a/src/main/resources/templates/maquina/listadosesiones.html
+++ b/src/main/resources/templates/maquina/listadosesiones.html
@@ -10,7 +10,9 @@
 	<nav th:replace="/plantillas/menucabecera :: menu"></nav>
 	<div class="container">
 		<h1 th:text="'Listado  Sesiones'"
-			class="text-dark border border-success border-top-0 border-left-0 border-right-0"></h1>
+			class="text-dark border border-alert border-top-0 border-left-0 border-right-0"></h1>
+			<a th:href="@{listado/pdf}" th:text="'PDF'"
+						class="btn btn-success btn-xs "></a></td>
 		<table
 			class="table table-striped table-bordered table-hover table-dark table-sm h-50">
 
