Actualización informe excell

--- a/src/main/resources/templates/plantillas/menucabecera.html
+++ b/src/main/resources/templates/plantillas/menucabecera.html
@@ -84,7 +84,7 @@
 								class="dropdown-item" th:href=@{/sesion/listado}>Listado</a> <a
 								class="dropdown-item" href="#"></a>
 						</div></li>
-					<li class="nav-item dropdown"><a
+		<!--  			<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#"
 						id="navbarDropdownMenuLink" data-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false"> Exportar </a>
@@ -93,7 +93,7 @@
 							<a class="dropdown-item" href="/cliente/listado">Clientes</a> <a
 								class="dropdown-item" th:href=@{/sesion/listado}>Sesiones</a> <a
 								class="dropdown-item" href="#"></a>
-						</div></li>
+						</div></li> -->
 				</ul>
 			</div>
 		</nav>
