--- a/src/main/resources/templates/maquina/listadosesiones.html
+++ b/src/main/resources/templates/maquina/listadosesiones.html
@@ -11,8 +11,9 @@
 	<div class="container">
 		<h1 th:text="'Listado  Sesiones'"
 			class="text-dark border border-alert border-top-0 border-left-0 border-right-0"></h1>
-			<a th:href="@{listado/pdf}" th:text="'PDF'"
-						class="btn btn-success btn-xs "></a></td>
+		<a th:href="@{listado/pdf}" th:text="'PDF'"
+			class="btn btn-danger btn-xs "></a> <a th:href="@{listado/excel}"
+			th:text="'XLS'" class="btn btn-success btn-xs "></a>
 		<table
 			class="table table-striped table-bordered table-hover table-dark table-sm h-50">
 
